--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ h1 {
   }
   
   .green {
-    background-color: rgb(0, 255, 0);
+    background: linear-gradient(#55680D, #71F53E, #116C31);
   }
   
   .blue {
