--- a/styles.css
+++ b/styles.css
@@ -23,5 +23,5 @@ h1 {
   }
   
   .blue {
-    background-color: rgb(0, 0, 255);
+    background: linear-gradient(hsl(186, 76%, 16%), hsl(223, 90%, 60%), hsl(240, 56%, 42%));
   }
