--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,21 @@ h1 {
     height: 25px;
     margin: 10px auto;
   }
+  .cap {
+    width: 60px;
+    height: 25px;
+  }
+  
+  .sleeve {
+    width: 110px;
+    height: 25px;
+    background-color: rgba(255, 255, 255, 0.5);
+    border-left: 10px double rgba(0, 0, 0, 0.75);
+  }
+  
+  .cap, .sleeve {
+    display: inline-block;
+  }
 
   .red {
     background: linear-gradient(90deg, rgb(255, 0, 0), rgb(0, 255, 0));
