--- a/styles.css
+++ b/styles.css
@@ -31,12 +31,18 @@ h1 {
 
   .red {
     background: linear-gradient(90deg, rgb(255, 0, 0), rgb(0, 255, 0));
+  box-shadow: 0 0 20px 0 rgba(83, 14, 14, 0.8);
+
   }
   
   .green {
     background: linear-gradient(#55680D, #71F53E, #116C31);
+  box-shadow: 0 0 20px 0 #3B7E20CC;
+
   }
   
   .blue {
     background: linear-gradient(hsl(186, 76%, 16%), hsl(223, 90%, 60%), hsl(240, 56%, 42%));
+  box-shadow: 0 0 20px 0 hsla(223, 59%, 31%, 0.8);
+
   }
